fix: refactor et clean code
-separation de la logique de getAvailabilities dans le repository en petite fonctions
-modification du service pour appeler les différentes fonctions nécessaire afin d'obtenir les disponibilité d'un jour